# compiledb4ms

./: CMakeLists.txt  readme.md  vcpkg.json
.github/workflows/: build_and_test.yml
compiledb4ms/: CMakeLists.txt  command_object.cpp  command_object.h  command_object.test.cpp  main.cpp
libcompiledb4ms/: CMakeLists.txt  command_object.cpp  command_object.h  command_object.test.cpp  sln.cpp  sln.h  sln.test.cpp  sln.test.sln  utils.cpp  utils.h  utils.test.cpp  vcxproj.cpp  vcxproj.h  vcxproj.test.cpp  vcxproj.test.vcxproj
libutils/: CMakeLists.txt  utils.cpp  utils.h  utils.test.cpp
tests/: CMakeLists.txt  usage.cpp  usage.sln  usage.vcxproj
